# sabergen

./: .editorconfig  .flake8  .gitignore  .pylintrc  LICENSE  Makefile  Pipfile  README.md  azure-pipelines.yml  pyproject.toml  sabergen.py
.github/workflows/: main.yml
cli/: libsabergen  sabergen_cli.py
libsabergen/: __init__.py  convert.py  core.py  output.py  sabergen.py  setup.py
libsabergen/sabergen/: convert.py  core.py  output.py
tests/: test_core.py
webserver/: app.py
